--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>MobiledocExperiments</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:700,600,400,300">
 
     {{content-for "head"}}
 
